--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<h1> this is app component html</h1>
-
+<nav>
+  <div class="nav-wrapper">
+    <a href="#" class="brand-logo">EventPortal</a>
+    <ul id="nav-mobile" class="right hide-on-med-and-down">
+      <li><a href="sass.html">About</a></li>
+    </ul>
+  </div>
+</nav>
