--- a/src/app/event-page/event-page.component.html
+++ b/src/app/event-page/event-page.component.html
@@ -1,3 +1,20 @@
-<p>
-  event-page works!
-</p>
+<div class="asf">
+  <div>
+    <img src="https://o.aolcdn.com/images/dims3/GLOB/legacy_thumbnail/1060x600/format/jpg/quality/85/http%3A%2F%2Fo.aolcdn.com%2Fhss%2Fstorage%2Fmidas%2F8edababa7263a04db76aa5c78a7e184e%2F205324357%2Fsunset-at-malibu-pier-california-picture-id658036322" class="img-fluid"
+         alt="Responsive image">
+  </div>
+
+
+  <div class="jumbotron text">
+    <div class="alert alert-success" role="alert">
+      <div><h4 class="alert-heading">Date: 10.10.2018</h4></div>
+      <div class="tab"><h4 class="alert-heading">Place: 10.10.2018</h4></div>
+    </div>
+    <h1 class="display-4">First event</h1>
+    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
+      featured content or information.</p>
+    <hr class="my-4">
+    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+  </div>
+</div>
