dev: created home c, added routing, created card component and added view in card html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,12 @@
 <nav>
-  <div class="nav-wrapper">
+  <div class="nav-wrapper container">
     <a href="#" class="brand-logo">EventPortal</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li><a href="sass.html">About</a></li>
     </ul>
   </div>
 </nav>
+
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
