--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,3 +1,13 @@
-<p>
-  card works!
-</p>
+<div class="row">
+  <div class="col s4">
+    <div class="card">
+      <div class="card-image">
+        <img src="https://ae01.alicdn.com/kf/HTB1JzNjOXXXXXXVXXXXq6xXFXXXB/Bela-paisagem-do-lago-de-montanha-de-neve-nuvens-Tadjiquist-o-4-Tamanhos-de-gua-azul.jpg_640x640.jpg">
+      </div>
+      <div class="card-content">
+        <span class="card-title">Card Title</span>
+        <p>I am a very simple card. I am good at containing small bits of information.</p>
+      </div>
+    </div>
+  </div>
+</div>
