Closes #1 - redesigned properly showing components and add button on the page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,13 @@
   <div class="nav-wrapper container">
     <a href="#" class="brand-logo">EventPortal</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><a href="sass.html">About</a></li>
+      <li><a href="google.com">Google</a></li>
     </ul>
   </div>
 </nav>
 
 <div class="container">
-  <router-outlet></router-outlet>
+  <div class="row">
+    <router-outlet></router-outlet>
+  </div>
 </div>
