--- a/src/app/event-page/event-page.component.html
+++ b/src/app/event-page/event-page.component.html
@@ -14,5 +14,6 @@
     <hr class="my-4">
     <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
     <a class="btn btn-primary btn-lg" href="#" role="button">Subscribe</a>
+    <button class="btn btn-primary btn-lg" (click)="onDelete(event)" >Delete</button>
   </div>
 </div>
